fix up spacing of post headings

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,6 +65,7 @@ h1, h2, h3, p, label, a {
 
   h3 {
     font-size: 14px;
+    line-height: 18px;
   }
 
   p {
